client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@import "@wordpress/base-styles/breakpoints";
@import "@automattic/onboarding/styles/mixins";

.domain-transfer {
	height: 100%;
	padding: 60px 0 0;
	margin: 0 auto;
	max-width: 1024px;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 30px;

	button:disabled {
		pointer-events: none;
	}

	&.domains {
		padding: 0;
		width: 754px;

		.step-container__header {
			margin-top: 96px;

			.formatted-header__title {
				font-size: 2.75rem;
			}
		}

		.step-container__navigation.action-buttons {
			position: absolute;
			top: 8px;
			inset-inline-start: 72px;
			inset-inline-end: 24px;
			padding: 1px 0 0;
			background-color: transparent;
			border: none;
			box-shadow: none;
		}

		@media (max-width: $break-medium ) {

			.step-container__header {
				width: 100%;
				margin-top: 48px;

				.formatted-header__title {
					font-size: 2rem;
					text-align: left;
				}
			}

			header {
				text-align: center;
			}

			gap: 0;
			justify-content: flex-start;
			margin-top: 24px;
			width: 100%;
		}
	}

	&.step-container {
		@media (max-width: $break-medium ) {
			padding: 0 20px;
		}

		.step-container__jetpack-powered {
			padding-top: 65px;
			padding-bottom: 56px;
			margin: 0;

			@media (min-width: $break-large ) {
				margin-top: auto;
			}

			@media (max-width: $break-large ) {
				padding-bottom: 32px;
			}
		}
	}


	.domains .step-container__content {
		flex-shrink: 0;
		width: 100%;

		@media (max-width: $break-medium ) {
			min-height: auto;
		}
	}

	.signup-header {
		z-index: 1;

		h1 {
			display: none;
		}
	}

	.domains__domain-info {
		display: flex;
		gap: 20px;
		align-items: flex-end;
		flex-wrap: wrap;

		@media (max-width: $break-medium ) {
			align-items: normal;
			flex-direction: column;
		}

		.form-fieldset {
			margin-bottom: 0;
		}

		.form-setting-explanation {
			margin-top: 0;
		}
	}

	.domains__domain-validation {
		margin-top: 12px;

		&.is-mobile {
			display: none;
		}

		&.is-desktop {
			display: block;
		}

		@media (max-width: $break-medium ) {
			margin-top: 0;

			&.is-mobile {
				display: block;
			}

			&.is-desktop {
				display: none;
			}
		}
	}

	.domains__domain-domain {
		flex: 7;
	}

	.domains__domain-key {
		flex: 3;
	}

	.domains__domain-price {
		flex: 1;
	}

	.domains__domain-domain,
	.domains__domain-key,
	.domains__domain-price {

		// Show the titles on mobile and hide on desktop (except for the first one)
		.form-label,
		.info-popover {
			display: none;
		}

		.form-label {
			&.is-first-row {
				display: inline-block;
				margin-bottom: 16px;
			}

			@media (max-width: $break-medium ) {
				display: block;
			}
		}

		.info-popover.is-first-row {
			display: inline-block;
			margin-bottom: 11px;

		}

		.form-fieldset {
			position: relative;

			input {
				padding-right: 30px;
				text-overflow: ellipsis;
			}

			.domains__domain-input-icon-container {
				position: absolute;
				right: 5px;
				width: 24px;
				height: 24px;
				bottom: 8px;

				.domains__domain-input-icon {
					&.is-valid {
						fill: #008a20;
					}

					&.is-not-valid {
						fill: #d63638;
					}
				}
			}

			div {
				height: 40px;
				display: flex;
				align-items: center;
			}
		}

		label {
			color: var(--gray-gray-60, #50575e);
			font-size: 1rem;
			font-weight: 500;
		}
	}


	.domains__domain-controls {
		display: flex;
		gap: 16px;
		flex: 1;

		.domains__domain-refresh {
			button {
				cursor: pointer;
			}

			.refresh-label {
				display: none;
			}

			@media (max-width: $break-medium ) {
				.refresh-label {
					display: block;
				}
			}
		}

		.domains__domain-delete {
			button {
				visibility: hidden;

				&.has-delete-button {
					visibility: visible;
				}

				&:hover {
					color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
				}
			}

			.delete-label {
				display: none;
			}

			@media (max-width: $break-medium ) {
				order: 1;

				.delete-label {
					display: block;
				}
			}
		}
	}

	.bulk-domain-transfer__container {

		.bulk-domain-transfer__add-domain {
			font-size: 0.875rem;
			font-weight: 500;
			color: #0675c4;
			margin-bottom: 22px;
			margin-top: 2px;
		}

		.bulk-domain-transfer__total-price {
			display: flex;
			justify-content: space-between;
			border-top: 1px solid rgba(220, 220, 222, 0.64);
			border-bottom: 1px solid rgba(220, 220, 222, 0.64);
			font-weight: 500;
			padding: 20px 0;
			margin-bottom: 42px;

			div:nth-of-type(1) {
				flex: 7;
			}

			div:nth-of-type(2) {
				flex: 2;

				@media (max-width: $break-medium ) {
					text-align: right;
				}
			}
		}

		.bulk-domain-transfer__cta-container {
			display: flex;
			justify-content: center;

			@media (max-width: $break-medium ) {
				margin-bottom: 50px;
			}

			.bulk-domain-transfer__cta {
				justify-content: center;
				color: var(--black-white-white, #fff);
				width: 157px;
				height: 48px;
				/* stylelint-disable-next-line declaration-property-unit-allowed-list */
				border-radius: 0.25rem;
				background: var(--blue-blue-50, #0675c4);
				font-size: 0.875rem;

				&:disabled {
					/* stylelint-disable-next-line declaration-property-unit-allowed-list */
					border-radius: 0.25rem;
					background: var(--gray-gray-5, #dcdcde);
					opacity: 1;
				}

				@media (max-width: $break-medium ) {
					width: 100%;
				}
			}
		}

	}

	.domains__domain-info-and-validation {
		margin-bottom: 12px;

		@media (max-width: $break-medium ) {
			&not:last-of-type {
				border-bottom: solid 1px #dcdcde;
				padding-bottom: 32px;
				margin-bottom: 32px;
			}
		}

		.form-input-validation {
			padding-top: 0;
			padding-bottom: 0;

			a {
				text-decoration: underline;
			}
		}
	}

	p.loading-placeholder {
		width: 300px;
		@include placeholder();
	}

	button.loading-placeholder {
		width: 150px;
		@include placeholder();
	}
}

